--- a/desafioqrcode/qr-code-component-main/index.html
+++ b/desafioqrcode/qr-code-component-main/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="card">
       <div class="card-body">
-          <img id='img' src="image-qr-code.png" height="300px"> 
+          <img id='img' alt="qrcode" src="image-qr-code.png" height="300px"> 
           <p id="p1" class="txt"><strong>Improve your front-end skills by building projects</strong> </p>
           <p id="p2" class="txt">Scan the QR Code to visit Front-End Mentor and take your code skills to the next level.</p>             
       </div>
